test for updating from wordpress #test1

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Behda Iran
-Theme URI: https://github.com/habedi118/behdairan
+Theme URI: https://github.com/habedi118/behdairan/
 Author: ha3an and #cetyteam
 Author URI: ha3an.ir 
 Description: It's theme use for business website 
