--- a/style.css
+++ b/style.css
@@ -10,3 +10,109 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: behdairan
 Tags: business ,
 */
+
+body ,html{
+    height:100%;
+    background-color:#ecf0f1;
+    font-family:yekan;
+    direction:rtl;
+    box-sizing:border-box;
+}
+.direction-ltr{
+    direction:ltr !important;
+    }
+.direction-rtl{
+    direction:rtl !important;
+    }
+li ,ul ,ol{
+    list-style:none;
+}
+a {
+    color:inherit;
+}
+.wellcome-page{
+     
+    background:url("img/bg/1.jpg") no-repeat ;
+    height:100%;
+    
+    background-position:center;
+    background-size:cover; 
+}
+.wellcome-cover{
+    background:rgba(44, 62, 80,.8);
+    height:100%;
+    background-size:cover;
+}
+.item:hover{
+    transform: scale(1.1);
+    background-color:#2c2c50;
+    color:rgba(236, 240, 241,1.0);
+    transition:all 1s;
+   -webkit-transition:all 1s;
+    -moz-transition:all 1s; 
+}
+.whyus{
+background-color:#34495e;
+background-image: url("img/bg/5.svg");
+background-attachment: fixed;
+background-size: cover;
+}
+.whyusitem:hover{
+     transform: scale(1.02);
+    transition:all .5s;
+   -webkit-transition:all 1s;
+    -moz-transition:all 1s;
+}
+.whyusitem:hover i{
+    color:#c0392b;
+    }
+.aboutus{
+    background-image:  linear-gradient(rgba(189, 195, 199,.9),rgba(189, 195, 199,.9)), url("img/bg/2.jpg");
+    background-blend-mode: lighten;
+    background-attachment:fixed; 
+    min-height:50%;
+    max-height:auto;
+    background-size:cover;    
+}
+.postitem{
+}
+.postitem:hover{
+    transform: scale(1.01);
+    -webkit-transition:all .3s;
+    -moz-transition:all .3s;
+    transition:all .3s;
+}
+.moveup{
+    position:fixed;
+    right:2%;
+    top:90%;
+}
+.moveup:hover{
+    color:#2980b9 !important;
+}
+.sidnav{
+    height:100%;
+    position:fixed;
+    top:0px;
+    right:0;
+    overflow:hidden;
+    -webkit-transition:all 1s;
+    -moz-transition:all 1s;
+    transition:all 1s;
+    }
+.sideopen{
+    width:70%;
+    }
+.sideclose{
+    width:0%
+    }
+@media (min-width:768px){
+    .sidnav{
+        height:auto;
+        position:relative; 
+        }
+    .sideclose{
+        width:auto;
+        }
+    }
+
